# libnrm

./: .clang-format  .flake8  .gitignore  .gitlab-ci.yml  .licenserc.yml  .readthedocs.yml  .valgrind.supp  AUTHORS  CONTRIBUTING.markdown  LICENSE  Makefile.am  README.md  bats-driver.sh.in  configure.ac  default.nix  libf_nrm.pc.in  libnrm.pc.in  libnrmf.pc.in  shell.nix
.github/workflows/: builds.yml  style.yml
bindings/python/: Makefile.am  setup.py
bindings/python/nrm/: __init__.py  base.py  bindings.py  bindings.py.in  client.py  setup.py
bindings/python/tests/: test_client.py  test_init.py  test_setup.py
ctests/: Makefile.am  mpi_basic.c  mpi_collectives.c
doc/: .gitignore  Doxyfile  Makefile.am  conf.py  doxy_c_api.rst  index.rst  intro_install.rst  make.bat  nrm.doxy  requirements.txt  simple_c_example.rst
doc/images/: hnrm.dia  nrm.dia
doc/pages/: config.rst  doxy_c_api.rst  intro_install.rst  quickstart.rst  simple_c_example.rst  simple_f_example.rst
examples/: config.json  europar21-static-characterization.sh  geopm.json
examples/controlling-stream/: control.sh  process.sh  static-characterization.sh  static.json
examples/controlling-xsbench/: control.sh  process.sh  static-characterization.sh  static-fit.py  static.json
examples/examples/: common_types.dhall
examples/examples/manifests/: libnrm.json  manifest_defaults.dhall
examples/examples/nrmd/: control.dhall  extra-static-actuator.json  extra-static-sensor.yaml
examples/manifests/: libnrm.dhall  manifest_defaults.json  manifest_types.dhall  perfwrap.dhall  perfwrap.yaml
examples/nrmd/: control.yaml  extra-static-sensor.dhall  nrmd_defaults.dhall  nrmd_defaults.json  nrmd_types.dhall
ftests/: Makefile.am  mpi_basic.f90  mpi_collectives.f90  test_collectives.mod
include/: Makefile.am  nrm-tools.h  nrm.h
include/internal/: actuators.h  control.h  messages.h  msg.h  nrmi.h  roles.h  utarray.h  uthash.h  utlist.h  utringbuffer.h
include/nrm/: tools.h
include/nrm/utils/: alloc.h  bitmaps.h  error.h  hashes.h  parsers.h  ringbuffer.h  scopes.h  strings.h  timers.h  uuids.h  variables.h  vectors.h  version.h.in
lib/: getcpu.c
nix/: geopmd.nix  libnrm.nix
python/: bindings.py  libnrm.py  nrm.py  setup.py
src/: Makefile.am  actuator.c  bitmaps.c  c_mpi_bindings.c  client.c  downstream_api.c  eventbase.c  f_downstream_api.c  f_mpi_bindings.c  f_nrm.h  hwloc.c  internal-downstream.h  log.c  messages.c  mpi_api.c  msg.proto  net.c  nrm-internal.h  nrm.c  nrm.h  nrm_messaging.h  nrm_mpi.h  nrmf.fh  nrmf.h  packing.c  reactor.c  scopes.c  sensor.c  sensor_emitter.c  sensor_receiver.c  server.c  slices.c  state.c  timers.c  timeserie.c  tools.c
src/actuators/: continuous.c  discrete.c
src/binaries/: nrm-dummy-extra.c  nrm-geopm-batch.c  nrm-geopm.c  nrm-papiwrapper.c  nrmc.c  nrmd.c  shim.c
src/control/: control.c  europar19.c  europar21.c
src/preloads/ompt/: entrypoint.c  nrm_omp.h  nrm_omp_callbacks.c
src/preloads/pmpi/: Makefile.am  c_mpi_bindings.c  mpi_api.c  nrm_mpi.h
src/python/: nrm-prometheus.py  nrm-setup.py
src/roles/: client.c  controller.c  monitor.c  role.c  sensor.c
src/scope/: get_scopes.h
src/utils/: argtable3.c  bitmaps.c  error.c  hashes.c  parsers.c  ringbuffer.c  scopes.c  strings.c  timers.c  uuids.c  vectors.c
tests/: Makefile.am  core.c  eventbase.c  hash.c  net.c  sensor.c
tests/cli/: Makefile.am  bats-driver.sh.in  common.bash.in  daemon-only.bats  daemon-with-config.bats  full-setup.bats  nrm-dummy-extra.bats  nrmc.bats  nrmd.bats  ompt.bats  runcmd.bash  standalone.bats  test_values.json
tests/geopm/: Makefile.am  full-setup.bats  standalone.bats
tests/ompt/: Makefile.am  omp_basic.c  omp_stream.c  ompt.bats
tests/pmpi/: Makefile.am  mpi_basic.c  mpi_collectives.c  pmpi.bats
tests/python/: test_client.py
tests/utils/: hash.c  ringbuffer.c  scope.c  string.c  vector.c
