include_HEADERS = nrm.h

include_nrm_utilsdir=$(includedir)/nrm/utils
include_nrm_utils_HEADERS = \
			    nrm/utils/alloc.h \
			    nrm/utils/bitmaps.h \
			    nrm/utils/scopes.h \
			    nrm/utils/strings.h \
			    nrm/utils/timers.h \
			    nrm/utils/uuids.h \
			    nrm/utils/version.h

noinst_HEADERS = \
		 internal/messages.h \
		 internal/roles.h
