include_HEADERS = nrm.h

include_nrm_utilsdir=$(includedir)/nrm/utils
include_nrm_utils_HEADERS = \
			    nrm/utils/alloc.h \
			    nrm/utils/bitmaps.h \
			    nrm/utils/error.h \
			    nrm/utils/ringbuffer.h \
			    nrm/utils/scopes.h \
			    nrm/utils/strings.h \
			    nrm/utils/timers.h \
			    nrm/utils/uuids.h \
			    nrm/utils/vectors.h \
			    nrm/utils/version.h

noinst_HEADERS = \
		 internal/nrmi.h \
		 internal/messages.h \
		 internal/roles.h \
		 internal/utarray.h \
		 internal/uthash.h \
		 internal/utlist.h \
		 internal/utringbuffer.h
